Updated AnalyzeRepos + repos.txt

--- a/Opi/Dockerfile
+++ b/Opi/Dockerfile
@@ -2,4 +2,4 @@ FROM tomcat:8.5
 
 MAINTAINER Achim Reiz <achim.reiz@uni-rostock.de>
 
-COPY ontometrics.war /usr/local/tomcat/webapps/ROOT.wara
+COPY ontometrics.war /usr/local/tomcat/webapps/ROOT.war
