--- a/Opi/pom.xml
+++ b/Opi/pom.xml
@@ -43,6 +43,7 @@
 		</plugins>
 	</build>
 	<dependencyManagement>
+
 		<dependencies>
 			<dependency>
 				<groupId>org.glassfish.jersey</groupId>
@@ -66,15 +67,17 @@
 			<artifactId>owlapi-distribution</artifactId>
 			<version>4.2.4</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.owlapi/org.semanticweb.hermit -->
+		<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>org.semanticweb.hermit</artifactId>
+			<version>1.4.5.456</version>
+		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.39</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
@@ -121,14 +124,6 @@
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>org.apache.jena</groupId>
-			<artifactId>apache-jena-libs</artifactId>
-			<type>pom</type>
-			<version>3.12.0</version>
-		</dependency>
-
 	</dependencies>
 	<packaging>war</packaging>
 </project>
