Connected Ontlogy, Git-Extension and Application
Connection was done in a first unittest. This included alteration of
the django model, the ontology and some fixes in the java application.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ Git-Extension/db.sqlite3
 Git-Extension/rest/__pycache__/
 Git-Extension/ontoMetricsAPI/__pycache__
 
+Git-Extension/rest/migrations
