--- a/Git-Extension/Pipfile
+++ b/Git-Extension/Pipfile
@@ -14,6 +14,9 @@ PyMySQL = "*"
 django-rq = "*"
 django-braces = "*"
 django-cors-headers = "*"
+treelib = "*"
+oxrdflib = "*"
+rdflib = "*"
 
 [dev-packages]
 autopep8 = "*"
