--- a/Opi/Dockerfile
+++ b/Opi/Dockerfile
@@ -2,4 +2,5 @@ FROM tomcat:8.5
 
 MAINTAINER Achim Reiz <achim.reiz@uni-rostock.de>
 
-COPY ontometrics.war /usr/local/tomcat/webapps/ROOT.war
+COPY * /RAWFILES/
+RUN jar -cvf /usr/local/tomcat/webapps/ROOT.war -C /RAWFILES .
