--- a/Opi/Dockerfile
+++ b/Opi/Dockerfile
@@ -1,6 +1,7 @@
+FROM maven:3.8.4-jdk-11 as maven_builder
+COPY ../ /RAWFILES/
+WORKDIR /RAWFILES
+RUN mvn clean package
+
 FROM tomcat:8.5
-
-MAINTAINER Achim Reiz <achim.reiz@uni-rostock.de>
-
-COPY * /RAWFILES/
-RUN jar -cvf /usr/local/tomcat/webapps/ROOT.war -C /RAWFILES .
+COPY --from=maven_builder /RAWFILES/target/ROOT.war /usr/local/tomcat/webapps/ROOT.war
