max Ontology Size Bugfixing, added migration service to docker

--- a/Git-Extension/Dockerfile
+++ b/Git-Extension/Dockerfile
@@ -7,5 +7,5 @@ EXPOSE 8000
 RUN pip install pipenv
 COPY . /code/
 RUN pipenv install --system --deploy
-#RUN python manage.py makemigrations migrate 
+#RUN python manage.py makemigrations rest migrate 
 #ENTRYPOINT ["python", "manage.py", "runserver", "0.0.0.0:8000"] 
