--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
     restart: always
     container_name: opi
     environment:
-      JVM_OPTS: -Xmx12g -Xms12g -XX:MaxPermSize=1024m
+      JVM_OPTS: -Xmx12g -Xms12g -XX:MaxPermSize=2g
     build:
       context: ./Opi
     image: opi
