--- a/Git-Extension/Pipfile
+++ b/Git-Extension/Pipfile
@@ -5,7 +5,6 @@ name = "pypi"
 
 [packages]
 djangorestframework = "*"
-django = "*"
 xmltodict = "*"
 pygit2 = "*"
 requests = "*"
@@ -18,6 +17,8 @@ treelib = "*"
 oxrdflib = "*"
 rdflib = "*"
 graphene-django = "*"
+django = "<4"
+django-filter = "*"
 
 [dev-packages]
 autopep8 = "*"
