--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - webpage/
+  - ./linkedin.png
+  - ./GitHub.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
