--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   graphql: ^5.0.1
   flutter_easyloading: ^3.0.3
+  flutter_svg: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -66,9 +67,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - webpage/
+  - ./webpage/
   - ./linkedin.png
   - ./GitHub.png
+  - ./neonto_logo.svg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
