--- a/Opi/pom.xml
+++ b/Opi/pom.xml
@@ -38,7 +38,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 				<configuration>
- 				 <goal>war:war</goal>
+ 				 <goal>war</goal>
 					<warName>ROOT</warName>
 					<!--  <warSourceDirectory>WebContent</warSourceDirectory>-->
 				</configuration>
@@ -84,14 +84,6 @@
 			<version>2.7</version>
 		</dependency>
 
-
-		<!-- XML-Library Xembler -->
-		<dependency>
-			<groupId>com.jcabi.incubator</groupId>
-			<artifactId>xembly</artifactId>
-			<version>0.22</version>
-		</dependency>
-
 		<!-- API, java.xml.bind module -->
 		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
@@ -126,17 +118,17 @@
 		    <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
-        <version>2.9.8</version>
+        <version>2.13.2</version>
     </dependency>
     <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>2.12.6.1</version>
+        <version>2.13.2.2</version>
     </dependency>
     <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-annotations</artifactId>
-    <version>2.9.8</version>
+    <version>2.13.2</version>
 </dependency>
 	</dependencies>
 	
