--- a/Opi/src/main/webapp/WEB-INF/web.xml
+++ b/Opi/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
- <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="namespace http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd" 
-	Version="2.4"> 
+ <web-app> 
 <!-- <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xmlns:web="http://java.sun.com/xml/ns/javaee"
