--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,18 @@ dependencies:
   flutter_easyloading: ^3.0.3
   flutter_svg: ^1.0.3
   matomo_tracker: ^1.2.1
+  provider: ^6.0.3
+  printing: ^5.9.3
+  google_fonts: ^3.0.1
+  multiselect: ^0.0.7
+  charts_flutter: ^0.12.0
+  get: ^4.6.5
+  screenshot: ^1.2.3
+  syncfusion_flutter_charts: ^20.2.49
+  syncfusion_flutter_pdf: ^20.3.48
+  pdf: ^3.8.3
+  pie_chart: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -72,9 +84,13 @@ flutter:
   - assets/webpage/SequenceDiagram.jpg
   - assets/webpage/calculationdescription.md
   - assets/webpage/homepage.md
-  - ./linkedin.png
-  - ./GitHub.png
-  - ./neonto_logo.svg
+  - assets/linkedin.png
+  - assets/GitHub.png
+  - assets/neonto_logo.svg
+  - assets/vertical_chart.png
+  - assets/horizontal_chart.png
+  - assets/pie_chart.png
+  - assets/line_chart.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
