--- a/Opi/.project
+++ b/Opi/.project
@@ -36,12 +36,12 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1613741843615</id>
+			<id>1667850209645</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
 				<id>org.eclipse.core.resources.regexFilterMatcher</id>
-				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
