--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   - assets/neonto_logo.svg
   - assets/vertical_chart.png
   - assets/line_chart.png
+  - assets/show_me_the_differences.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
