--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -35,13 +35,10 @@ dependencies:
   url_launcher: ^6.0.18
   http: 0.13.4 
   json_serializable: ^6.1.4
-  flutter_math_fork: ^0.6.1
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  flutter_math_fork: ^0.7.1
   graphql: ^5.0.1
   flutter_easyloading: ^3.0.3
-  flutter_svg: ^1.0.3
+  flutter_svg: ^2.0.3
   matomo_tracker: ^1.2.1
   provider: ^6.0.3
   printing: ^5.9.3
@@ -51,7 +48,7 @@ dependencies:
   screenshot: ^1.2.3
   syncfusion_flutter_charts: ^20.4.43
   syncfusion_flutter_pdf: ^20.3.48
-  pdf: ^3.8.3
+  youtube_player_iframe: ^4.0.4
 
   
 dev_dependencies:
