--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,10 @@
-FROM cirrusci/flutter:latest AS flutterbuild
+FROM ghcr.io/cirruslabs/flutter:stable AS flutterbuild
 
 COPY . /frontend
 WORKDIR /frontend
 RUN flutter build web
 
-FROM python:3
+FROM python:3.10
 COPY --from=flutterbuild /frontend/build/web /web
 WORKDIR /web
 ENTRYPOINT python3 -m http.server
