--- a/Git-Extension/Pipfile
+++ b/Git-Extension/Pipfile
@@ -4,22 +4,23 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-djangorestframework = "*"
-xmltodict = "*"
-pygit2 = "*"
-requests = "*"
-cryptography = "*"
-PyMySQL = "*"
-django-rq = "*"
-django-braces = "*"
-django-cors-headers = "*"
-treelib = "*"
-rdflib = "*"
-graphene-django = "*"
-django = "<4"
-django-filter = "*"
-django-newsletter = "*"
+djangorestframework = "3.13.1"
+xmltodict = "0.13.0"
+pygit2 = "1.10.0"
+requests = "2.28.1"
+cryptography = "37.0.4"
+PyMySQL = "1.0.2"
+django-rq = "2.5.1"
+redis = "4.3.4"
+django-braces = "1.15.0"
+django-cors-headers = "3.13.0"
+treelib = "1.6.1"
+rdflib = "6.2.0"
+graphene-django = "2.15.0"
+django = "3.2.15"
+django-filter = "22.1"
 dj-rest-auth = "*"
+rq = "1.11.0"
 
 [dev-packages]
 autopep8 = "*"
